@@ -25,6 +25,7 @@ Version : 4.12.6 #XG1
 - Added a new label to the Items toolstrip to display decimals, making it more user-friendly than before.
 - Added Items - toggle for rhombus function via button.
 - Added Items - an additional PictureBox with dimensions 1000x1000 to display larger images for testing and zoom function.
+- Items: Added Mass Removal and Select with Ctrl.
 
 Version : 4.12.5 #XG1
 - AminEdit added new features, Body Human display will be expanded, and Mounted.
